--- a/Components/Account/Shared/ManageNavMenu.razor
+++ b/Components/Account/Shared/ManageNavMenu.razor
@@ -1,7 +1,8 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using ronwell_assignment.Data
+@using ronwell_assignment.Models
 
-@inject SignInManager<ApplicationUser> SignInManager
+@inject SignInManager<EmployerUserApplication> SignInManager
 
 <ul class="nav nav-pills flex-column">
     <li class="nav-item">
