--- a/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/Areas/Identity/Pages/_ViewImports.cshtml
@@ -2,4 +2,4 @@
 @using ronwell_assignment.Areas.Identity
 @using ronwell_assignment.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using ronwell_assignment.Data
+@using ronwell_assignment.Models
