--- a/Components/Account/Pages/ConfirmEmail.razor
+++ b/Components/Account/Pages/ConfirmEmail.razor
@@ -4,8 +4,9 @@
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
 @using ronwell_assignment.Data
+@using ronwell_assignment.Models
 
-@inject UserManager<ApplicationUser> UserManager
+@inject UserManager<EmployerUserApplication> UserManager
 @inject IdentityRedirectManager RedirectManager
 
 <PageTitle>Confirm email</PageTitle>
