--- a/Components/Account/Pages/ConfirmEmailChange.razor
+++ b/Components/Account/Pages/ConfirmEmailChange.razor
@@ -4,9 +4,10 @@
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
 @using ronwell_assignment.Data
+@using ronwell_assignment.Models
 
-@inject UserManager<ApplicationUser> UserManager
-@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<EmployerUserApplication> UserManager
+@inject SignInManager<EmployerUserApplication> SignInManager
 @inject IdentityRedirectManager RedirectManager
 
 <PageTitle>Confirm email change</PageTitle>
