--- a/Components/Account/Pages/Manage/DeletePersonalData.razor
+++ b/Components/Account/Pages/Manage/DeletePersonalData.razor
@@ -3,9 +3,10 @@
 @using System.ComponentModel.DataAnnotations
 @using Microsoft.AspNetCore.Identity
 @using ronwell_assignment.Data
+@using ronwell_assignment.Models
 
-@inject UserManager<ApplicationUser> UserManager
-@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<EmployerUserApplication> UserManager
+@inject SignInManager<EmployerUserApplication> SignInManager
 @inject IdentityUserAccessor UserAccessor
 @inject IdentityRedirectManager RedirectManager
 @inject ILogger<DeletePersonalData> Logger
@@ -40,7 +41,7 @@
 
 @code {
     private string? message;
-    private ApplicationUser user = default!;
+    private EmployerUserApplication user = default!;
     private bool requirePassword;
 
     [CascadingParameter]
