--- a/Components/Account/Pages/Manage/Disable2fa.razor
+++ b/Components/Account/Pages/Manage/Disable2fa.razor
@@ -2,8 +2,9 @@
 
 @using Microsoft.AspNetCore.Identity
 @using ronwell_assignment.Data
+@using ronwell_assignment.Models
 
-@inject UserManager<ApplicationUser> UserManager
+@inject UserManager<EmployerUserApplication> UserManager
 @inject IdentityUserAccessor UserAccessor
 @inject IdentityRedirectManager RedirectManager
 @inject ILogger<Disable2fa> Logger
@@ -31,7 +32,7 @@
 </div>
 
 @code {
-    private ApplicationUser user = default!;
+    private EmployerUserApplication user = default!;
 
     [CascadingParameter]
     private HttpContext HttpContext { get; set; } = default!;
