--- a/Components/Account/Pages/Manage/Email.razor
+++ b/Components/Account/Pages/Manage/Email.razor
@@ -6,9 +6,10 @@
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
 @using ronwell_assignment.Data
+@using ronwell_assignment.Models
 
-@inject UserManager<ApplicationUser> UserManager
-@inject IEmailSender<ApplicationUser> EmailSender
+@inject UserManager<EmployerUserApplication> UserManager
+@inject IEmailSender<EmployerUserApplication> EmailSender
 @inject IdentityUserAccessor UserAccessor
 @inject NavigationManager NavigationManager
 
@@ -55,7 +56,7 @@
 
 @code {
     private string? message;
-    private ApplicationUser user = default!;
+    private EmployerUserApplication user = default!;
     private string? email;
     private bool isEmailConfirmed;
 
