--- a/Components/Account/Pages/Manage/GenerateRecoveryCodes.razor
+++ b/Components/Account/Pages/Manage/GenerateRecoveryCodes.razor
@@ -2,8 +2,9 @@
 
 @using Microsoft.AspNetCore.Identity
 @using ronwell_assignment.Data
+@using ronwell_assignment.Models
 
-@inject UserManager<ApplicationUser> UserManager
+@inject UserManager<EmployerUserApplication> UserManager
 @inject IdentityUserAccessor UserAccessor
 @inject IdentityRedirectManager RedirectManager
 @inject ILogger<GenerateRecoveryCodes> Logger
@@ -40,7 +41,7 @@ else
 
 @code {
     private string? message;
-    private ApplicationUser user = default!;
+    private EmployerUserApplication user = default!;
     private IEnumerable<string>? recoveryCodes;
 
     [CascadingParameter]
