--- a/Components/Account/Pages/Manage/Index.razor
+++ b/Components/Account/Pages/Manage/Index.razor
@@ -3,9 +3,10 @@
 @using System.ComponentModel.DataAnnotations
 @using Microsoft.AspNetCore.Identity
 @using ronwell_assignment.Data
+@using ronwell_assignment.Models
 
-@inject UserManager<ApplicationUser> UserManager
-@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<EmployerUserApplication> UserManager
+@inject SignInManager<EmployerUserApplication> SignInManager
 @inject IdentityUserAccessor UserAccessor
 @inject IdentityRedirectManager RedirectManager
 
@@ -34,7 +35,7 @@
 </div>
 
 @code {
-    private ApplicationUser user = default!;
+    private EmployerUserApplication user = default!;
     private string? username;
     private string? phoneNumber;
 
