--- a/Components/Account/Pages/Manage/ResetAuthenticator.razor
+++ b/Components/Account/Pages/Manage/ResetAuthenticator.razor
@@ -2,9 +2,10 @@
 
 @using Microsoft.AspNetCore.Identity
 @using ronwell_assignment.Data
+@using ronwell_assignment.Models
 
-@inject UserManager<ApplicationUser> UserManager
-@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<EmployerUserApplication> UserManager
+@inject SignInManager<EmployerUserApplication> SignInManager
 @inject IdentityUserAccessor UserAccessor
 @inject IdentityRedirectManager RedirectManager
 @inject ILogger<ResetAuthenticator> Logger
