--- a/Components/Account/Pages/Manage/SetPassword.razor
+++ b/Components/Account/Pages/Manage/SetPassword.razor
@@ -3,9 +3,10 @@
 @using System.ComponentModel.DataAnnotations
 @using Microsoft.AspNetCore.Identity
 @using ronwell_assignment.Data
+@using ronwell_assignment.Models
 
-@inject UserManager<ApplicationUser> UserManager
-@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<EmployerUserApplication> UserManager
+@inject SignInManager<EmployerUserApplication> SignInManager
 @inject IdentityUserAccessor UserAccessor
 @inject IdentityRedirectManager RedirectManager
 
@@ -39,7 +40,7 @@
 
 @code {
     private string? message;
-    private ApplicationUser user = default!;
+    private EmployerUserApplication user = default!;
 
     [CascadingParameter]
     private HttpContext HttpContext { get; set; } = default!;
