--- a/Components/Account/Pages/RegisterConfirmation.razor
+++ b/Components/Account/Pages/RegisterConfirmation.razor
@@ -4,9 +4,10 @@
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
 @using ronwell_assignment.Data
+@using ronwell_assignment.Models
 
-@inject UserManager<ApplicationUser> UserManager
-@inject IEmailSender<ApplicationUser> EmailSender
+@inject UserManager<EmployerUserApplication> UserManager
+@inject IEmailSender<EmployerUserApplication> EmailSender
 @inject NavigationManager NavigationManager
 @inject IdentityRedirectManager RedirectManager
 
