--- a/Components/Account/Pages/ResetPassword.razor
+++ b/Components/Account/Pages/ResetPassword.razor
@@ -5,9 +5,10 @@
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
 @using ronwell_assignment.Data
+@using ronwell_assignment.Models
 
 @inject IdentityRedirectManager RedirectManager
-@inject UserManager<ApplicationUser> UserManager
+@inject UserManager<EmployerUserApplication> UserManager
 
 <PageTitle>Reset password</PageTitle>
 
