--- a/Components/Account/Shared/ExternalLoginPicker.razor
+++ b/Components/Account/Shared/ExternalLoginPicker.razor
@@ -1,8 +1,9 @@
 ﻿@using Microsoft.AspNetCore.Authentication
 @using Microsoft.AspNetCore.Identity
 @using ronwell_assignment.Data
+@using ronwell_assignment.Models
 
-@inject SignInManager<ApplicationUser> SignInManager
+@inject SignInManager<EmployerUserApplication> SignInManager
 @inject IdentityRedirectManager RedirectManager
 
 @if (externalLogins.Length == 0)
