--- a/Components/User/Edit/Index.razor
+++ b/Components/User/Edit/Index.razor
@@ -51,7 +51,11 @@
             <ValidationMessage For="@(() => user.Salary)" />
         </div>
 
-        <button type="submit" class="btn btn-primary">Save Changes</button>
+        <div class="d-flex gap-2 mt-2 align-content-center align-items-center">
+            <button type="submit" class="btn btn-primary">Save Changes</button>
+            <NavLink class="link-dark" href="auth">Go Back</NavLink>
+        </div>
+
     </EditForm>
 }
 else
